--- a/app/src/main/res/layout/item_nota2.xml
+++ b/app/src/main/res/layout/item_nota2.xml
@@ -25,7 +25,7 @@
         android:layout_weight="0.2"
         android:gravity="start"
         android:fontFamily="@font/erraserdust"
-        android:textColor="@color/red_warm"
+        android:textColor="@color/white"
         android:layout_marginStart="10dp"
         android:textSize="15sp"
         android:textStyle="bold"
