--- a/app/src/main/res/layout/main_elevi_activity.xml
+++ b/app/src/main/res/layout/main_elevi_activity.xml
@@ -16,6 +16,26 @@
         android:textColor="@color/white"
         android:textSize="20sp" />
 
+    <LinearLayout android:id="@+id/alertLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone"
+        android:padding="20dp"
+        android:alpha="0.7">
+
+        <ListView
+            android:id="@+id/alertList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="10dp"
+            android:padding="10dp"
+            android:scrollbars="none" />
+
+    </LinearLayout>
+
     <ListView
         android:id="@+id/main_elevi_lista"
         android:layout_width="match_parent"
