--- a/app/src/main/res/layout/client_home_activity.xml
+++ b/app/src/main/res/layout/client_home_activity.xml
@@ -4,26 +4,80 @@
     android:layout_height="match_parent"
     android:background="@drawable/tabla">
 
-    <TextView
-        android:id="@+id/title"
+    <LinearLayout android:id="@+id/title_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:layout_marginTop="20dp"
-        android:alpha="0.7"
-        android:gravity="center"
-        android:text="@string/situatie_gen"
-        android:fontFamily="@font/eraserregular"
-        android:textColor="@color/white"
-        android:textSize="25sp"
-        android:textStyle="bold" />
+        android:weightSum="1"
+        android:gravity="start|center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="0dp"
+            android:layout_weight="0.6"
+            android:layout_height="wrap_content"
+            android:alpha="0.7"
+            android:gravity="start"
+            android:layout_marginStart="10dp"
+            android:text="@string/situatie_gen"
+            android:fontFamily="@font/eraserregular"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:id="@+id/title_layout2"
+            android:layout_width="0dp"
+            android:layout_weight="0.4"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:gravity="end|center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/sem"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha="0.8"
+                android:gravity="end"
+                android:layout_marginStart="5dp"
+                android:background="@drawable/list_view_yellow_hard"
+                android:padding="5dp"
+                android:fontFamily="@font/eraserregular"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha="0.6"
+                android:gravity="start"
+                android:layout_marginStart="5dp"
+                android:background="@drawable/list_view_green"
+                android:padding="5dp"
+                android:fontFamily="@font/eraserregular"
+                android:textColor="@color/black"
+                android:textSize="13sp"
+                android:visibility="gone"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+
+    </LinearLayout>
 
     <LinearLayout android:id="@+id/alertLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_below="@+id/title"
+        android:layout_below="@+id/title_layout"
         android:visibility="gone"
-        android:padding="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:alpha="0.7">
 
         <ListView
