--- a/app/src/main/res/layout/main_add.xml
+++ b/app/src/main/res/layout/main_add.xml
@@ -17,7 +17,63 @@
         android:alpha="0.7"
         android:gravity="center"
         android:padding="16dp"
+        android:layout_marginBottom="20dp"
         android:inputType="text" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/list_view_green"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:text="Semestrul 1"
+            android:textColor="@color/black"
+            android:padding="10dp"/>
+        <TextView
+            android:id="@+id/sem_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/din_pana"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"/>
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/list_view_green"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:text="Semestrul 2"
+            android:textColor="@color/black"
+            android:padding="10dp"/>
+        <TextView
+            android:id="@+id/sem_text2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/din_pana"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"/>
+
+    </LinearLayout>
 
     <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
