--- a/app/src/main/res/layout/item_client_inbox_mesaj.xml
+++ b/app/src/main/res/layout/item_client_inbox_mesaj.xml
@@ -12,15 +12,13 @@
         android:layout_marginRight="20dp"
         android:layout_marginBottom="5dp"
         android:clickable="false"
-        card_view:cardBackgroundColor="@color/comments"
         card_view:cardCornerRadius="10dp"
         card_view:cardElevation="5dp"
         card_view:cardMaxElevation="20dp">
 
-        <LinearLayout
+        <LinearLayout android:id="@+id/lay"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -34,6 +32,7 @@
                     android:layout_width="0dp"
                     android:layout_weight="0.5"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
                     android:layout_marginStart="10dp"
                     android:gravity="start"
                     android:textSize="12sp"
