--- a/app/src/main/res/layout/activity_note_perf_chart.xml
+++ b/app/src/main/res/layout/activity_note_perf_chart.xml
@@ -18,7 +18,7 @@
             android:text="@string/performante_bune"
             android:textColor="@color/white"
             android:textSize="25sp" />
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="10dp"
             android:orientation="horizontal"
