--- a/app/src/main/res/layout/add_absenta_dialog.xml
+++ b/app/src/main/res/layout/add_absenta_dialog.xml
@@ -5,7 +5,6 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:orientation="vertical"
-    android:background="@drawable/rounded_dialog"
     android:padding="20dp">
 
     <TextView
@@ -13,19 +12,19 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_marginTop="20dp"
-        android:text="@string/absenta_mesaj"
-        />
+        android:text="@string/absenta_mesaj" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:gravity="center"
         android:layout_marginTop="20dp"
         android:orientation="horizontal">
 
         <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/dialogButtonCancel"
-            android:layout_width="100dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="20dp"
@@ -43,7 +42,7 @@
 
         <mehdi.sakout.fancybuttons.FancyButton
             android:id="@+id/dialogButtonOK"
-            android:layout_width="100dp"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="20dp"
