--- a/app/src/main/res/layout/add_nota_dialog.xml
+++ b/app/src/main/res/layout/add_nota_dialog.xml
@@ -20,7 +20,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:visibility="gone"
-        android:text="@string/teza_materie" />
+        android:text="@string/teza_nota" />
 
     <mehdi.sakout.fancybuttons.FancyButton
         android:id="@+id/dialogButtonOK"
