--- a/app/src/main/res/layout/client_elev_item.xml
+++ b/app/src/main/res/layout/client_elev_item.xml
@@ -2,7 +2,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:alpha="0.75"
-    android:background="@drawable/list_view"
+    android:background="@drawable/click_yellow"
     android:orientation="vertical"
     android:padding="10dp">
 
